--- a/build.xml
+++ b/build.xml
@@ -26,12 +26,13 @@
 	</target>
 	
 	<target name="retrieve" description="retreive dependencies">
+		<mkdir dir="${webContent.dir}/WEB-INF/lib" />
 		<taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="classpath" />
 		<ivy:resolve file="${basedir}/ivy.xml" log="download­only" />
 		<ivy:retrieve pattern="${ivy.retrieve.pattern}" conf="default" />
 	</target>
 
-	<target name="compile" depends="clean, init">
+	<target name="compile" depends="clean, init, retrieve">
 		<javac srcdir="${src.dir}" destdir="${classes.dir}" source="1.6" target="1.6" classpathref="classpath" />
 	 </target>
 
