--- a/build.xml
+++ b/build.xml
@@ -22,6 +22,11 @@
 		<war destfile="${war.file}" webxml="${webContent.dir}/WEB-INF/web.xml">
 			<classes dir="${classes.dir}" />
 			<fileset dir="${webContent.dir}" excludes="**/servlet-api-jar­2.5.jar" />
+			<zipfileset 
+				dir="${src.dir}" 
+				includes="**/*.sql" 
+				prefix="WEB-INF/classes/"
+			/>
 		</war>
 	</target>
 	
