--- a/ivy.xml
+++ b/ivy.xml
@@ -4,11 +4,13 @@
 	<configurations defaultconf="default" />
 	<dependencies>
 		
+    <dependency org="org.hibernate" name="hibernate-entitymanager" rev="4.2.6.Final"/>
     <dependency org="commons-pool" name="commons-pool" rev="20030825.183949"/>
     <dependency org="commons-dbcp" name="commons-dbcp" rev="20030825.184428"/>
     <dependency org="commons-collections" name="commons-collections" rev="20040616"/>
     <dependency org="commons-dbutils" name="commons-dbutils" rev="1.5"/>
     <dependency org="org.hsqldb" name="hsqldb" rev="2.3.0"/>
+    <dependency org="javax.servlet" name="servlet-api" rev="2.5"/>
 
     <dependency org="org.apache.ant" name="ant" rev="1.9.2"/>
 
